Fix badge wording alignment.

--- a/codewof/static/scss/website.scss
+++ b/codewof/static/scss/website.scss
@@ -178,6 +178,15 @@ strong {
   }
 }
 
+.badge-container {
+  clear: both;
+}
+
+.badge-icon {
+  padding: 5px;
+  float: left;
+}
+
 .img-inline {
     max-height: 1.5rem;
 }
